

Data exploration
----------------

- Several improvements in processing data output of the inferior debugger:
  * Many more data formats are recognized.
  * Trailing data is no longer ignored.
  * C++ base classes as reported by AIX DBX are interpreted correctly.
  * Value changes in status displays are flagged more precisely.
  * Creating and updating data displays uses a common code base.

- `Set ()' allows to set structs as a whole.

- Anonymous unions are no longer prefixed by `='.


Source exploration
------------------

- Double-clicking on a function call (that is, an identifier followed
  by a `(' character) will lead you to the function definition.


Platforms
---------

- You can build DDD out-of-the box on Windows 95 and NT (via cygwin32,
  http://www.cygnus.com/misc/gnu-win32/).  This is useful for people
  using GCC and GDB on Windows, or for people using DDD as a front-end
  to JDB.  Note that you need a Windows X server to run DDD.


Miscellaneous
-------------

- Signal settings are saved with the current session.

- Improved redirection handling.  You can redirect stderr away from
  the execution window, using `run 2> FILE'.  The debugger command
  `run 2> /dev/tty' will redirect stderr to the debugger console.

- In a separate window setting, data buttons are properly placed.

- Minor performance improvements.



DDD 3.0
=======

DDD 3.0 brings a new, `clean' look, Java support, and JDB support.


User Interface
--------------

- New, `clean' look.  One single tool bar at the top provides all actions.

- Low screen space requirements.  In the default configuration, DDD
  requires less than 600x600 pixels.

- Configurable fonts.  You can easily customize DDD font settings via
  `Edit->Preferences->Fonts'.

- Tear-off menus are supported (and enabled by default).

- New key bindings.
  * All key bindings are conformant with the KDE style guide:
    Ctrl+O opens a file, Ctrl+S saves the session, etc.